<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">To-Do List</string>

    <string name="settings">Settings</string>
    <string name="new_edit_todo">Add/Edit task</string>
    <string name="todo">What?</string>
    <string name="name_cannot_be_empty">The name of the task cannot be empty!</string>
    <string name="empty_list">Move along, nothing to see here!</string>
    <string name="error_while_saving">Error while saving the data!</string>
    <string name="error_while_updating">Error while updating the data!</string>
    <string name="empty_widget">No tasks for you</string>

    <string name="deleted_one_task">Deleted one task</string>
    <string name="deleted_more_tasks">Deleted %d tasks</string>
    <string name="undo">UNDO</string>

    <!-- Widget -->
    <string name="widget_name">To-Do List</string>
    <string name="widget">Widget</string>
    <string name="transparentBackground">Transparent background</string>
    <string name="hideTitle">Hide title</string>
</resources>
