<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/remove"
        android:layout_alignParentLeft="true"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:src="@drawable/ic_action_remove"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/list_item_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/todo_list_states"
        android:layout_alignParentLeft="true"
        android:gravity="center">

        <ImageView
            android:id="@+id/priority_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:src="@drawable/priority_icon"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>


        <CheckBox
            android:id="@+id/done_checkbox"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>


        <TextView
            android:id="@+id/task_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_toLeftOf="@id/done_checkbox"
            android:layout_toRightOf="@id/priority_image"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <LinearLayout
            android:id="@+id/done_layer"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:background="@color/primary_color">
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>