<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:id="@+id/root_layout">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:padding="5dip">

        <EditText
            android:id="@+id/txt_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:hint="@string/todo"
            android:singleLine="true"
            android:imeOptions="actionDone"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/low_priority"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:src="@drawable/priority_icon"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"
                android:layout_weight="1"/>

            <ImageButton
                android:id="@+id/normal_priority"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:src="@drawable/priority_icon"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"
                android:layout_weight="1"/>

            <ImageButton
                android:id="@+id/high_priority"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:src="@drawable/priority_icon"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"
                android:layout_weight="1"/>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>

