<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_remove"
        android:layout_alignParentLeft="true"
        android:background="?android:attr/selectableItemBackground"
        android:layout_centerInParent="true" />

    <ImageButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_accept"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:background="?android:attr/selectableItemBackground"
        android:layout_marginRight="15dp"/>
</RelativeLayout>